Practice 3 different ways of adding error messages: passing a string as 2nd arg, passing an object wirh error string, and an object with error map function, and how to customize them. Enlarge the form width to accomodate error messages and prevent vertical shifts whenever error texts are rendered below the field

--- a/src/style/ZodValidationForm.css
+++ b/src/style/ZodValidationForm.css
@@ -1,3 +1,7 @@
+form {
+  min-width: 50vw;
+}
+
 input[type='radio'] {
   display: inline-block;
 }
